--- a/Connect4.html
+++ b/Connect4.html
@@ -8,7 +8,7 @@
 			if(y[y.length-1].style.background = "white"){
 				y[y.length-1].style.background = "black";
 			}
-			else if(y[y.length-1].style.background = "black"){
+			else{
 				y[y.length-1].style.background = "white";
 			}
 
