--- a/Connect4.html
+++ b/Connect4.html
@@ -3,36 +3,62 @@
 	<head>
 		<script type="text/javascript">
 			var turn = true
+			var horzontal = 0;
+			var posDiagonal = 0;
+			var negDiagonal = 0;
+			
 			function $(id){
 			return document.getElementById(id);
 			}
-			function columb(pieces, numPieces){
+			
+			function columb(pieces, numPieces, posColor){
 				this.pieces = pieces;
 				this.numPieces = numPieces;
+				this.posColor = posColor;
 				this.add = function(){
 					if(turn === true && this.numPieces !== 7){
 						this.pieces[this.pieces.length - this.numPieces].style.background = "red";
+						this.posColor.push(true);
 						this.numPieces++;
 						turn = false;
 					}
 					else{
 						if(this.numPieces !== 7){
 							this.pieces[this.pieces.length - this.numPieces].style.background = "black";
+							this.posColor.push(false);
 							this.numPieces++;
 							turn = true;
 						}
 					}
 				}
 			}
+			
 			window.onload = function(){
-				c1 = new columb($('board0').children, 1);
-				c2 = new columb($('board1').children, 1);
-				c3 = new columb($('board2').children, 1);
-				c4 = new columb($('board3').children, 1);
-				c5 = new columb($('board4').children, 1);
-				c6 = new columb($('board5').children, 1);
+				c1 = new columb($('board0').children, 1, []);
+				c2 = new columb($('board1').children, 1, []);
+				c3 = new columb($('board2').children, 1, []);
+				c4 = new columb($('board3').children, 1, []);
+				c5 = new columb($('board4').children, 1, []);
+				c6 = new columb($('board5').children, 1, []);		
+			}
+			
+			function checkWin(){
+				win(c1, c2, c3, c4);
+				win(c2, c3, c4, c5);
+				win(c3, c4, c5, c6);
 			}
 
+			function win(obj1, obj2, obj3, obj4){
+				var w = obj1.posColor;
+				var x = obj2.posColor;
+				var y = obj3.posColor;
+				var z = obj4.posColor;
+				for(var a=0; a<6; a++){
+					if(w[a] === true && x[a] === true && y[a] === true && z[a] === true){
+						alert("win");
+					}
+				}
+			}
 		</script>
 		<style type="text/css">
 			.board{
@@ -57,7 +83,7 @@
 		</style>
 	</head>
 	<body>
-		<div class="board" id="board0" onclick="c1.add()"> 
+		<div class="board" id="board0" onclick="c1.add()" onchange="checkWin()"> 
 			<div class="circle" id="circle1"></div>
 			<div class="circle" id="circle2"></div>
 			<div class="circle" id="circle3"></div>
@@ -65,7 +91,7 @@
 			<div class="circle" id="circle5"></div>
 			<div class="circle" id="circle6"></div>
 		</div>
-		<div class="board" id="board1" onclick="c2.add()">
+		<div class="board" id="board1" onclick="c2.add()" onchange="checkWin()">
 			<div class="circle" id="circle7"></div>
 			<div class="circle" id="circle8"></div>
 			<div class="circle" id="circle9"></div>
@@ -73,7 +99,7 @@
 			<div class="circle" id="circle11"></div>
 			<div class="circle" id="circle12"></div>
 		</div>
-		<div class="board" id="board2" onclick="c3.add()">
+		<div class="board" id="board2" onclick="c3.add()" onchange="checkWin()">
 			<div class="circle" id="circle13"></div>
 			<div class="circle" id="circle14"></div>
 			<div class="circle" id="circle15"></div>
@@ -81,7 +107,7 @@
 			<div class="circle" id="circle17"></div>
 			<div class="circle" id="circle18"></div>
 		</div>
-		<div class="board" id="board3" onclick="c4.add()">
+		<div class="board" id="board3" onclick="c4.add()" onchange="checkWin()">
 			<div class="circle" id="circle19"></div>
 			<div class="circle" id="circle20"></div>
 			<div class="circle" id="circle21"></div>
@@ -89,7 +115,7 @@
 			<div class="circle" id="circle23"></div>
 			<div class="circle" id="circle24"></div>
 		</div>
-		<div class="board" id="board4" onclick="c5.add()">
+		<div class="board" id="board4" onclick="c5.add()" onchange="checkWin()">
 			<div class="circle" id="circle25"></div>
 			<div class="circle" id="circle26"></div>
 			<div class="circle" id="circle27"></div>
@@ -97,7 +123,7 @@
 			<div class="circle" id="circle29"></div>
 			<div class="circle" id="circle30"></div>
 		</div>
-		<div class="board" id="board5" onclick="c6.add()">
+		<div class="board" id="board5" onclick="c6.add()" onchange="checkWin()">
 			<div class="circle" id="circle31"></div>
 			<div class="circle" id="circle32"></div>
 			<div class="circle" id="circle33"></div>
