--- a/Connect4.html
+++ b/Connect4.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<script type="text/javascript">
-			var turn = true
+			var turn = true;
 			
 			function $(id){
 			return document.getElementById(id);
