--- a/Connect4.html
+++ b/Connect4.html
@@ -333,10 +333,10 @@
 				var c = checkPosDiag();
 				var d = checkNegDiag();
 				if(a === "red" || b === "red" || c === "red" || d === "red"){
-					alert("you win");
+					alert("Red Wins!");
 				}
 				else if(a === "black" || b === "black" || c === "black" || d === "black"){
-					alert("yo win");
+					alert("Black Wins!");
 				}
 			}
 		</script>
